k8s/deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/quarkus-version: 3.28.2
    app.quarkus.io/commit-id: ace08c61e4c8411de9667929bcbb7567b2e9919f
    app.quarkus.io/vcs-uri: https://github.com/ReinaldoSolano/brewery.git
    app.quarkus.io/build-timestamp: 2025-10-06 - 22:10:46 +0000
  labels:
    app.kubernetes.io/name: brewery
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/managed-by: quarkus
  name: brewery
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: brewery
    app.kubernetes.io/version: 1.0.0
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/quarkus-version: 3.28.2
    app.quarkus.io/commit-id: ace08c61e4c8411de9667929bcbb7567b2e9919f
    app.quarkus.io/vcs-uri: https://github.com/ReinaldoSolano/brewery.git
    app.quarkus.io/build-timestamp: 2025-10-06 - 22:10:46 +0000
  labels:
    app.kubernetes.io/name: brewery
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/managed-by: quarkus
  name: brewery
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: brewery
      app.kubernetes.io/version: 1.0.0
  template:
    metadata:
      annotations:
        app.quarkus.io/quarkus-version: 3.28.2
        app.quarkus.io/commit-id: ace08c61e4c8411de9667929bcbb7567b2e9919f
        app.quarkus.io/vcs-uri: https://github.com/ReinaldoSolano/brewery.git
        app.quarkus.io/build-timestamp: 2025-10-06 - 22:10:46 +0000
      labels:
        app.kubernetes.io/managed-by: quarkus
        app.kubernetes.io/name: brewery
        app.kubernetes.io/version: 1.0.0
    spec:
      containers:
        - image: rssystem/brewery:14
          resources:
            requests:
              memory: "128Mi"
              cpu: "200m"
            limits:
              memory: "256Mi"
              cpu: "300m"
          imagePullPolicy: Always
          name: brewery
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          startupProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/started
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
